# numetron

./: .gitignore  CMakeLists.txt  FUNDING.yml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  numetron.slnx  numetron_tests.sln  vcpkg.json
.github/workflows/: linux-tests.yml  msvc-tests.yml
docs/: custom-toom-plans.md
include/numetron/: arithmetic.hpp  basic_decimal.hpp  basic_integer.hpp  ct.hpp  decimal_arithmetic.hpp  decimal_view.hpp  float16.hpp  integer_view.hpp  integer_view_arithmetic.hpp  limb_arithmetic.hpp  limbs_from_decimal_string.hpp  limbs_from_integral.hpp  limbs_from_string.hpp  limbs_to_string.hpp
include/numetron/config/: cmath.hpp  start_lifetime.hpp
include/numetron/detail/: assert.hpp  hash.hpp  scope_exit.hpp  small_array.hpp  stack_allocator.hpp
include/numetron/limb_arithmetic/: platform.hpp  thresholds.hpp  toom_2x2.hpp  toom_3x3.hpp  toom_core.hpp  toom_engine.hpp  toom_plan.hpp  uadd.hpp  udiv.hpp  udivby1.hpp  umul.hpp  umul1.hpp  umul_basecase.hpp  umul_karatsuba.hpp  usub.hpp
include/numetron/limb_arithmetic/toom/: core.hpp  engine.hpp  slot.hpp  thresholds.hpp  toom_2x2.hpp  toom_3x3.hpp
lib/: CMakeLists.txt
msvc/: .gitignore  numetron.natvis  numetron.vcxproj  numetron.vcxproj.filters  numetron_tests.sln  numetron_tests.vcxproj  numetron_tests.vcxproj.filters
src/arch/: README.md
src/arch/aarch64/: detect_mul_basecase.s
src/arch/x86_64/: detect_mul_basecase.asm  detect_mul_basecase.s  detect_platform.asm  detect_platform.s
src/arch/x86_64/alderlake/: mul_basecase.asm  mul_basecase.s
src/arch/x86_64/core2/: mul_basecase.asm  mul_basecase.s
src/arch/x86_64/k8/: mul_basecase.asm  mul_basecase.s
tests/: basic_decimal_test.cpp  basic_integer_test.cpp  ct_test.cpp  float16_test.cpp  mpn_mul_test.cpp  mul_test.cpp  test_common.hpp  tests.cpp
